# snapzap

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md
.github/workflows/: c-cpp.yml
examples/: zfs-daily-snapshot.service  zfs-daily-snapshot.timer  zfs-weekly-snapshot.service  zfs-weekly-snapshot.timer
src/: snapzap.c
tests/: create_testpool.sh  test_snapzap.bats
